# quick-capture-snr

./: .coverage  .gitignore  QUICKCAPTURE_TECHNICAL_MANUAL.md  README.md  debug_storage_test.py  progress_report.md  pyproject.toml  quickcapture_build_guide.md  quickcapture_system_tension.md  requirements.txt  snr_quickcapture_spec.md  start_quickcapture.bat
config/: grammar_rules.yaml  observability.yaml  tag_intelligence.yaml
debugging/: debug_simple.py  debug_storage_test.py
observability/: performance_tracker.py
qc-documentation/: 02-architecture-data-flow.md  05-ingestion-layer.md  07-routing-layer.md  11-error-handling.md  12-extension-points.md  13-testing-framework.md  14-observability.md
scripts/: kill_port.py  models.py  parse_input.py  server.py  snr_preprocess.py  storage_engine.py  validate_note.py
snr-quickcapture/: .coverage  ML_ENHANCEMENT_ROADMAP.md  README.md  SNR_QUICKCAPTURE_ANALYSIS_EN.md  debug_no_lock.py  debug_performance_summary.py  debug_statistics.py  debug_test.py  debug_validation.py  env.example  fix_terminal_issues.md  requirements.txt  setup_env.bat  setup_simple.bat  test_environment.py
snr-quickcapture/config/: semantic_validation.yaml  storage_config.yaml
snr-quickcapture/debugging/: debug_get_all_profiles.py  debug_get_operation_profile.py
snr-quickcapture/observability/: drift_detector.py  health_monitor.py  performance_tracker.py
snr-quickcapture/qc-documentation/: 01-system-overview.md  02-architecture-data-flow.md  03-core-data-structures.md  04-configuration-management.md  05-ingestion-layer.md  06-embedding-layer.md  07-routing-layer.md  09-usage-examples.md  (+7 more)
snr_quickcapture.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
storage/: quickcapture.db
tests/: test_basic_functionality.py  test_observability.py
(+6 files in other folders)
